tests/type_errors/calling_non_function.sy
def main
: Int -> Int
: a = f ' a

def f
: Int
: = 1

--+ expected exit status: 3
--+ expected stderr:
--+ check err: CheckUnify { msg: "Failed to merge types", a: "Int", b: "Function(Int, Unknown)", span: Span(30, 31) }
